chore: base logo impl
