# apps/server/src/features/uniswap-v3/app/get-position-fees.usecase.ts
@@ -5,7 +5,9 @@ import { PositionsRepository } from "../data/positions.repository";
 
 @injectable()
 export class GetPositionFeesUseCase {
-  constructor(@inject(PositionsRepository) public readonly positionsRepository: PositionsRepository) {}
+  constructor(
+    @inject(PositionsRepository) public readonly positionsRepository: PositionsRepository,
+  ) {}
 
   async execute(id: string) {
     const position = await this.positionsRepository.getPosition(id);
@@ -14,6 +16,8 @@ export class GetPositionFeesUseCase {
     const entity = position.value.toDomain();
     const positionFees = await this.positionsRepository.getPositionFees(entity);
     if (positionFees.isErr()) return err(positionFees.error);
+
+    const { token0, token1 } = entity.pool;
 
     const feeGrowthInside0X128 = computeFeeGrowthInside(
       entity.pool.currentTick,
@@ -39,12 +43,12 @@ export class GetPositionFeesUseCase {
     const unclaimedFees0 = positionFees.value.tokensOwed0 + (positionFees.value.onChainLiquidity * feeGrowthInside0DeltaX128) / Q128;
     const unclaimedFees1 = positionFees.value.tokensOwed1 + (positionFees.value.onChainLiquidity * feeGrowthInside1DeltaX128) / Q128;
 
-    const fees0Formatted = Number(unclaimedFees0) / 10 ** entity.pool.token0.decimals;
-    const fees1Formatted = Number(unclaimedFees1) / 10 ** entity.pool.token1.decimals;
+    const fees0Formatted = Number(unclaimedFees0) / 10 ** token0.decimals;
+    const fees1Formatted = Number(unclaimedFees1) / 10 ** token1.decimals;
 
     return ok({
-      token0: entity.pool.token0.response,
-      token1: entity.pool.token1.response,
+      token0: token0.response,
+      token1: token1.response,
       unclaimedFees: {
         token0: { value: fees0Formatted, USDValue: 0 },
         token1: { value: fees1Formatted, USDValue: 0 },
